# django-hordak

./: .gitignore  pyproject.toml
hordak/migrations/: 0055_alter_leg_currency.py
