[project]
name = "django-hordak"
version = "2.0.1"
authors = [
  {name = "Adam Charnock", email = "adam@adamcharnock.com"},
]
license = "MIT"
description = "Double entry book keeping in Django"
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "babel>=2.9.1",
    "dj-database-url>=3.0.1",
    "django>=4",
    "django-extensions>=1.7.3",
    "django-import-export>=4",
    "django-money>=3",
    "django-mptt>=0.8",
    "openpyxl<=2.6 ; python_full_version < '3.5'",
    "py-moneyed>=3.0",
    "requests>=2",
]

[dependency-groups]
dev = [
    "coveralls>=4.0.2",
    "django-coverage-plugin>=3.2.0",
    "mock>=5.2.0",
    "parameterized>=0.9.0",
    "psycopg>=3.3.2",
    "psycopg-binary>=3.3.2",
    "pytest>=9.0.2",
    "requests-mock>=1.12.1",
    "setuptools>=80.9.0",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "hordak"